// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalFormBody Component renders a form with delete paragraph when action is Delete 1`] = `
<div>
  <form>
    <p>
      Are you sure you want to delete this movie?
    </p>
    <div
      class="row justify-content--flex-end"
    >
      <div
        class="column column--m-3"
      >
        <button
          class="btn btn--primary btn--full-width"
          tabindex="0"
          type="submit"
        >
          Confirm
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`ModalFormBody Component renders a form with inputs when action is Add 1`] = `
<div>
  <form>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for="title"
      >
        Title
      </label>
      <input
        class="form__input"
        id="title"
        name="title"
        placeholder="Title here"
        type="text"
        value=""
      />
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for=""
      >
        Release Date
      </label>
      <div
        class="react-date-picker react-date-picker--closed react-date-picker--enabled"
      >
        <div
          class="react-date-picker__wrapper"
        >
          <div
            class="react-date-picker__inputGroup"
          >
            <input
              max="275760-09-13"
              min="0001-01-01"
              name="date"
              style="visibility: hidden; position: absolute; z-index: -999;"
              type="date"
              value=""
            />
            
            <input
              autocomplete="off"
              class="react-date-picker__inputGroup__input react-date-picker__inputGroup__day"
              data-input="true"
              inputmode="numeric"
              max="31"
              min="1"
              name="day"
              placeholder="Day"
              style="width: 17px;"
              type="number"
              value=""
            />
            <span
              class="react-date-picker__inputGroup__divider"
            >
              -
            </span>
            <input
              autocomplete="off"
              class="react-date-picker__inputGroup__input react-date-picker__inputGroup__month"
              data-input="true"
              inputmode="numeric"
              max="12"
              min="1"
              name="month"
              placeholder="Month"
              style="width: 28px;"
              type="number"
              value=""
            />
            <span
              class="react-date-picker__inputGroup__divider"
            >
              -
            </span>
            <input
              autocomplete="off"
              class="react-date-picker__inputGroup__input react-date-picker__inputGroup__year"
              data-input="true"
              inputmode="numeric"
              max="275760"
              min="1"
              name="year"
              placeholder="Year"
              step="1"
              style="width: 20px;"
              type="number"
              value=""
            />
            
          </div>
          <button
            class="react-date-picker__calendar-button react-date-picker__button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-calendar-alt fa-w-14 "
              data-icon="calendar-alt"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for="poster_path"
      >
        Movie Poster URL
      </label>
      <input
        class="form__input"
        id="poster_path"
        name="poster_path"
        placeholder="Movie Poster URL here"
        type="text"
        value=""
      />
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for=""
      >
        Genre
      </label>
      <div
        class="go2139093995 multi-select"
      >
        <div
          aria-readonly="true"
          class="go2646822163 dropdown-container"
          tabindex="0"
        >
          <div
            class="go2642161244 dropdown-heading"
          >
            <div
              class="dropdown-heading-value"
            >
              <span
                class="gray"
              >
                Select Genres
              </span>
            </div>
            <svg
              class="dropdown-heading-dropdown-arrow gray"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-width="2"
              width="24"
            >
              <path
                d="M6 9L12 15 18 9"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for="overview"
      >
        Overview
      </label>
      <input
        class="form__input"
        id="overview"
        name="overview"
        placeholder="Overview here"
        type="text"
        value=""
      />
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for="runtime"
      >
        Runtime
      </label>
      <input
        class="form__input"
        id="runtime"
        name="runtime"
        placeholder="Runtime here"
        type="number"
        value=""
      />
    </div>
    <div
      class="row justify-content--flex-end"
    >
      <div
        class="column column--m-3"
      >
        <button
          class="btn btn--outline btn--full-width"
          tabindex="0"
          type="reset"
        >
          Reset
        </button>
      </div>
      <div
        class="column column--m-3"
      >
        <button
          class="btn btn--primary btn--full-width"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`ModalFormBody Component renders a form with inputs when action is Edit 1`] = `
<div>
  <form>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for="title"
      >
        Title
      </label>
      <input
        class="form__input"
        id="title"
        name="title"
        placeholder="Title here"
        type="text"
        value=""
      />
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for=""
      >
        Release Date
      </label>
      <div
        class="react-date-picker react-date-picker--closed react-date-picker--enabled"
      >
        <div
          class="react-date-picker__wrapper"
        >
          <div
            class="react-date-picker__inputGroup"
          >
            <input
              max="275760-09-13"
              min="0001-01-01"
              name="date"
              style="visibility: hidden; position: absolute; z-index: -999;"
              type="date"
              value=""
            />
            
            <input
              autocomplete="off"
              class="react-date-picker__inputGroup__input react-date-picker__inputGroup__day"
              data-input="true"
              inputmode="numeric"
              max="31"
              min="1"
              name="day"
              placeholder="Day"
              style="width: 17px;"
              type="number"
              value=""
            />
            <span
              class="react-date-picker__inputGroup__divider"
            >
              -
            </span>
            <input
              autocomplete="off"
              class="react-date-picker__inputGroup__input react-date-picker__inputGroup__month"
              data-input="true"
              inputmode="numeric"
              max="12"
              min="1"
              name="month"
              placeholder="Month"
              style="width: 28px;"
              type="number"
              value=""
            />
            <span
              class="react-date-picker__inputGroup__divider"
            >
              -
            </span>
            <input
              autocomplete="off"
              class="react-date-picker__inputGroup__input react-date-picker__inputGroup__year"
              data-input="true"
              inputmode="numeric"
              max="275760"
              min="1"
              name="year"
              placeholder="Year"
              step="1"
              style="width: 20px;"
              type="number"
              value=""
            />
            
          </div>
          <button
            class="react-date-picker__calendar-button react-date-picker__button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-calendar-alt fa-w-14 "
              data-icon="calendar-alt"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for="poster_path"
      >
        Movie Poster URL
      </label>
      <input
        class="form__input"
        id="poster_path"
        name="poster_path"
        placeholder="Movie Poster URL here"
        type="text"
        value=""
      />
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for=""
      >
        Genre
      </label>
      <div
        class="go2139093995 multi-select"
      >
        <div
          aria-readonly="true"
          class="go2646822163 dropdown-container"
          tabindex="0"
        >
          <div
            class="go2642161244 dropdown-heading"
          >
            <div
              class="dropdown-heading-value"
            >
              <span
                class="gray"
              >
                Select Genres
              </span>
            </div>
            <svg
              class="dropdown-heading-dropdown-arrow gray"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-width="2"
              width="24"
            >
              <path
                d="M6 9L12 15 18 9"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for="overview"
      >
        Overview
      </label>
      <input
        class="form__input"
        id="overview"
        name="overview"
        placeholder="Overview here"
        type="text"
        value=""
      />
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for="runtime"
      >
        Runtime
      </label>
      <input
        class="form__input"
        id="runtime"
        name="runtime"
        placeholder="Runtime here"
        type="number"
        value=""
      />
    </div>
    <div
      class="row justify-content--flex-end"
    >
      <div
        class="column column--m-3"
      >
        <button
          class="btn btn--outline btn--full-width"
          tabindex="0"
          type="reset"
        >
          Reset
        </button>
      </div>
      <div
        class="column column--m-3"
      >
        <button
          class="btn btn--primary btn--full-width"
          tabindex="0"
          type="submit"
        >
          Save
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`ModalFormBody Component renders form with selectedMovie values when action is MODAL_FORM_EDIT_ACTION and form is reset 1`] = `
<div>
  <form>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for="id"
      >
        Movie ID
      </label>
      <input
        class="form__input"
        disabled=""
        id="id"
        name="id"
        placeholder=""
        type="number"
        value="1"
      />
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for="title"
      >
        Title
      </label>
      <input
        class="form__input"
        id="title"
        name="title"
        placeholder="Title here"
        type="text"
        value="A film title"
      />
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for=""
      >
        Release Date
      </label>
      <div
        class="react-date-picker react-date-picker--closed react-date-picker--enabled"
      >
        <div
          class="react-date-picker__wrapper"
        >
          <div
            class="react-date-picker__inputGroup"
          >
            <input
              max="275760-09-13"
              min="0001-01-01"
              name="date"
              style="visibility: hidden; position: absolute; z-index: -999;"
              type="date"
              value=""
            />
            
            <input
              autocomplete="off"
              class="react-date-picker__inputGroup__input react-date-picker__inputGroup__day"
              data-input="true"
              inputmode="numeric"
              max="31"
              min="1"
              name="day"
              placeholder="Day"
              style="width: 17px;"
              type="number"
              value=""
            />
            <span
              class="react-date-picker__inputGroup__divider"
            >
              -
            </span>
            <input
              autocomplete="off"
              class="react-date-picker__inputGroup__input react-date-picker__inputGroup__month"
              data-input="true"
              inputmode="numeric"
              max="12"
              min="1"
              name="month"
              placeholder="Month"
              style="width: 28px;"
              type="number"
              value=""
            />
            <span
              class="react-date-picker__inputGroup__divider"
            >
              -
            </span>
            <input
              autocomplete="off"
              class="react-date-picker__inputGroup__input react-date-picker__inputGroup__year"
              data-input="true"
              inputmode="numeric"
              max="275760"
              min="1"
              name="year"
              placeholder="Year"
              step="1"
              style="width: 20px;"
              type="number"
              value=""
            />
            
          </div>
          <button
            class="react-date-picker__calendar-button react-date-picker__button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-calendar-alt fa-w-14 "
              data-icon="calendar-alt"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for="poster_path"
      >
        Movie Poster URL
      </label>
      <input
        class="form__input"
        id="poster_path"
        name="poster_path"
        placeholder="Movie Poster URL here"
        type="text"
        value="https://film.com/image.jpg"
      />
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for=""
      >
        Genre
      </label>
      <div
        class="go2139093995 multi-select"
      >
        <div
          aria-readonly="true"
          class="go2646822163 dropdown-container"
          tabindex="0"
        >
          <div
            class="go2642161244 dropdown-heading"
          >
            <div
              class="dropdown-heading-value"
            >
              <span>
                Documentary
              </span>
            </div>
            <button
              aria-label="Clear Selected"
              class="go1003880112 clear-selected-button"
              type="button"
            >
              <svg
                class="dropdown-search-clear-icon gray"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-width="2"
                width="24"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </button>
            <svg
              class="dropdown-heading-dropdown-arrow gray"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-width="2"
              width="24"
            >
              <path
                d="M6 9L12 15 18 9"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for="overview"
      >
        Overview
      </label>
      <input
        class="form__input"
        id="overview"
        name="overview"
        placeholder="Overview here"
        type="text"
        value="A great film"
      />
    </div>
    <div
      class="form-element-wrapper"
    >
      <label
        class="form__label"
        for="runtime"
      >
        Runtime
      </label>
      <input
        class="form__input"
        id="runtime"
        name="runtime"
        placeholder="Runtime here"
        type="number"
        value="145"
      />
    </div>
    <div
      class="row justify-content--flex-end"
    >
      <div
        class="column column--m-3"
      >
        <button
          class="btn btn--outline btn--full-width"
          tabindex="0"
          type="reset"
        >
          Reset
        </button>
      </div>
      <div
        class="column column--m-3"
      >
        <button
          class="btn btn--primary btn--full-width"
          tabindex="0"
          type="submit"
        >
          Save
        </button>
      </div>
    </div>
  </form>
</div>
`;
